--- a/topology-and-groups/topology-and-groups-math0074.tex
+++ b/topology-and-groups/topology-and-groups-math0074.tex
@@ -82,7 +82,7 @@ the site on Topology and Groups by Prof. Jonny Evans.
 \end{definition}
 
 \begin{proposition}
-  $\text{id}:(X,\mathcal{T}\rightarrow (X,\mathcal{T}')$ is continuous if and only if 
+  $\text{id}:(X,\mathcal{T})\rightarrow (X,\mathcal{T}')$ is continuous if and only if 
   $\mathcal{T}$ is finer than $\mathcal{T}'$.
 \end{proposition}
 
@@ -104,7 +104,7 @@ the site on Topology and Groups by Prof. Jonny Evans.
 \end{definition}
 
 \begin{proposition}
-  Product of Hausdorff spaces if Hausdorff.
+  Product of Hausdorff spaces is Hausdorff.
 \end{proposition}
 
 \subsection{Connectedness}
@@ -164,7 +164,7 @@ the site on Topology and Groups by Prof. Jonny Evans.
 \end{proposition}
 
 \begin{definition}[Locally (path) connected]
-  A space $X$ is locally (path ) connected at a point $p$ if for every open neighbourhood $U$ of $p$, 
+  A space $X$ is locally (path) connected at a point $p$ if for every open neighbourhood $U$ of $p$, 
   there exists a (path) connected open neighbourhood $V$ of $p$ such that $p\in V\subset U$.
 \end{definition}
 
