--- a/topology-and-groups/topology-and-groups-math0074.tex
+++ b/topology-and-groups/topology-and-groups-math0074.tex
@@ -188,7 +188,7 @@ the site on Topology and Groups by Prof. Jonny Evans.
 \end{definition}
 
 \begin{lemma}
-  Closed subset sof compact spaces are compact.
+  Closed subsets of compact spaces are compact.
 \end{lemma}
 
 \begin{theorem}
@@ -247,7 +247,7 @@ the site on Topology and Groups by Prof. Jonny Evans.
 
 \begin{definition}[Disjoint union]
   Let $X_1,X_2$ be topological spaces. The \emph{disjoint union} of $X_1$ and $X_2$,
-  $X_1\sqcup X_2$ is the space with the underlying set $X_1\sqcup X_2$, with $U$ open 
+  $X_1\sqcup X_2$, is the space with the underlying set $X_1\sqcup X_2$, with $U$ open 
   in $X_1\sqcup X_2$ if and only if $U\cap X_1$ is open in $X_1$, and $U\cap X_2$ is 
   open in $X_2$.
 \end{definition}
