--- a/algebraic-topology/algebraic-topology-math0023.tex
+++ b/algebraic-topology/algebraic-topology-math0023.tex
@@ -1211,10 +1211,6 @@ so for example, $S^1(3)$ is the triangle, $S^1(4)$ is the square, $S^1(5)$ the p
 	from its containing $2$-simplices.
 \end{definition}
 
-\begin{eg}
-	orientability of $T^2$
-\end{eg}
-
 \subsection{{Euler characteristic}}
 \begin{definition}
 	Let $X=(V_X,\mathcal{S}_X)$ be a finite simplicial complex. Let $c_n$ be the number of
@@ -1239,7 +1235,7 @@ $\mathbb{F}$.
 	\[c_n=\dim C_n(X;\mathbb{F})\] so put $h_n=\dim H_n(X;\mathbb{F})$ and look at the 
 	sequence
 	\[C_{n+1}(X)\xrightarrow{\partial_{n+1}}C_n(X)\xrightarrow{\partial_n}C_{n-1}(X)\]
-	\[H_n(X)=\ker\partial_n/\text{im}\partial_{n+1}=Z_n(X)/B_n(X)\]
+	\[H_n(X)=\ker\partial_n/\text{im }\partial_{n+1}=Z_n(X)/B_n(X)\]
 	Put $z_n=\dim\ker\partial_n, \,b_n=\dim\text{im}(\partial_{n+1})$ so 
 	\[z_n=h_n+b_n\] However by the kernel-rank theorem,
 	\[c_n=z_n+b_{n-1}\] hence \[c_n=h_n+b_n+b_{n-1}\]
@@ -1251,11 +1247,6 @@ $\mathbb{F}$.
 
 As $H_*(X;\mathbb{F})$ is invariant under subdivision, it follows that $\chi_\text{geom}(X)$
 is the same as well, so from now on, we will usually just write $\chi(X)$.
-
-\begin{eg}
-	euler characteristic examples
-	homology of real projective plane example
-\end{eg}
 
 \begin{definition}[Connected sum of surfaces]
 	Let $\Sigma, \,\Sigma'$ be surfaces. Let $\sigma$ be a $2$-simplex in $\Sigma, \,\sigma'$ 
@@ -1270,17 +1261,105 @@ is the same as well, so from now on, we will usually just write $\chi(X)$.
 \end{proposition}
 
 \begin{eg}
-	examples of orientable surfaces, 2-sphere, 2-torus, etc.
+Some examples of orientable surfaces, are the following,
+\[\Sigma_+^0=S^2\]\[\Sigma_+^1=T^2\]\[\Sigma_+^2=T^2\#T^2\]\[\Sigma_+^g=T^2\#\ldots\#T^2\text{ (g times)}\] These are orientable surfaces of genus $g$.
 \end{eg}
 
+\begin{proposition}
+	$\chi(\Sigma_+^g)=2-2g$
+\end{proposition}
+
+\begin{proof}
+	We proceed by induction on $g$. This is clearly true for $g=0$ ($\chi(S^2)=2$) and 
+	$g=1$ ($\chi(T^2)=0)$. Suppose this is true for some $g\geq 1$, then,
+	\[\Sigma_+^{g+1}=\Sigma_+^g\#\Sigma_+^1\]
+	\begin{eqnarray*}
+		\chi(\Sigma_+^{g+1})&=&\chi(\Sigma_+^g)+\chi(\Sigma_+^1)-2 \\
+		&=& 2 - 2g + 0 - 2 \\
+		&=& 2 - 2(g+1)
+	\end{eqnarray*}
+\end{proof}
+
+\begin{corollary}
+	Over any field $\mathbb{F}$,
+	\[H_k(\Sigma_+^g;\mathbb{F})=\begin{cases}
+		\mathbb{F} & k = 0 \\ \mathbb{F}^{2g} & k = 1 \\ \mathbb{F} & k = 2 \\ 0 & k>2
+	\end{cases}\]
+\end{corollary}
+
+\begin{eg}
+	The following are examples of \text{non-orientable} surfaces,
+	\[\Sigma_-^0 = \mathbb{R}P(2)\]\[\Sigma_-^1=\mathbb{R}P(2)\#\mathbb{R}P(2)\,\,\, (\cong)\text{ Klein bottle})\]\[\Sigma_-^g=\mathbb{R}P(2)\#\ldots\#\mathbb{R}P(2)
+	\text{ (g+1 times)}\]
+\end{eg}
+
+\begin{proposition}
+	$\chi(\Sigma_-^g)=1-g$
+\end{proposition}
+
+\begin{proof}
+	We proceed by induction.
+	\[\Sigma_-^0=\mathbb{R}P(2), \,\chi(\Sigma_-^0)=1\] hence is true for $g=0$.
+	Suppose this is true for $g\geq0$, then,
+	\[\Sigma_-^{g+1}=\Sigma_-^g \# \mathbb{R}P(2)\] and so on. Then,
+	\begin{eqnarray*}
+		\chi(\Sigma_-^{g+1})&=&\chi(\Sigma_-^g)+\chi(\mathbb{R}P(2)) - 2 \\
+		&=& (1-g) + 1 - 2 \\
+		&=& 1 - (g+1)
+	\end{eqnarray*}
+\end{proof}
+
+\begin{proposition}
+	If $1+1\neq 0$ in $\mathbb{F}$, then,
+	\[H_k(\Sigma_-^g;\mathbb{F})=\begin{cases}
+		\mathbb{F} & k = 0 \\ \mathbb{F}^g & k = 1 \\ 0 & k \geq 2
+	\end{cases}\]
+\end{proposition}
+
+\begin{proof}
+	$H_2(\Sigma_-^g;\mathbb{F})=0$ by the Orientation theorem. We know 
+	\[H_0(\Sigma_-^g;\mathbb{F})=\mathbb{F}\text{ (connected)}\] Then,
+	\[\chi_{\text{hom}}(\Sigma_-^g)=h_0^\mathbb{F}-h_1^\mathbb{F}+h_2^\mathbb{F}\]
+	\[1-g = 1 - h_1^\mathbb{F} + 0\]
+	\[h_1^\mathbb{F} = g\]
+	hence \[H_1(\Sigma_-^g;\mathbb{F})=\mathbb{F}^g\]
+\end{proof}
+
+\begin{proposition}
+	If $1+1=0$ in $\mathbb{F}$, then,
+	\[H_k(\Sigma_-^g;\mathbb{F})=\begin{cases}
+		\mathbb{F} & k = 0 \\ \mathbb{F}^{g+1} & k = 1 \\ \mathbb{F} & k = 2
+	\end{cases}\]
+\end{proposition}
+
+\begin{proof}
+	$\chi = 1 - g$ but now 
+	\[h_0^\mathbb{F} = 1, \,h_2^\mathbb{F} = 1 \,\,\,(1+1 = 0)\]
+	and thus 
+	\[h_1^\mathbb{F} = g + 1\]
+\end{proof}
+
 \begin{theorem}[Classification Theorem for Surfaces]
-	placeholder
+	Let $\Sigma$ be a finite connected surface.
+	\begin{enumerate}
+		\item If $\Sigma$ is orientable, then, 
+		\[\Sigma\sim\Sigma_+^g\text{ for some }g\geq0\]
+		\item If $\Sigma$ is non-orientable, then,
+		\[\Sigma\sim\Sigma_-^g\text{ for some }g\geq0\]
+	\end{enumerate}
 \end{theorem}
+
+\noindent The homology groups of the surfaces distinguishes them, i.e.,
+\[\Sigma_+^g\sim\Sigma_+^h\iff g = h\]
+\[\Sigma_-^g\sim\Sigma_-^h\iff g = h\]
+\[\Sigma_+^g\not\sim\Sigma_-^g\]
+One non-trivial relation is 
+\[\mathbb{R}P(2)\# T^2\sim\mathbb{R}P(2)\#\mathbb{R}P(2)\#\mathbb{R}P(2)\]
 
 Recall that if $\sigma$ is a simplex of $X$, then $Lk(\sigma, X)$ is equal to the complex where simplices $\tau$ satisfy $\sigma\cap\tau=\emptyset$, where $\sigma\cup\tau$ is a simplex
 of $X$. \\
 
-A simplicial surface $\Sigma$ is a complex in which \[Lk(v,\Sigma)\cong S^1(N)\] where
+\noindent A simplicial surface $\Sigma$ is a complex in which \[Lk(v,\Sigma)\cong S^1(N)\] where
 $v$ is a vertex of $\Sigma$ ($N\geq3$). Recall that $S^1(N)$ is the circle with $N$ 
 subdivision points, for example, $S^1(5)$ is 'the' pentagon. \\
 
